fixed collapse

--- a/client/src/components/Button.css
+++ b/client/src/components/Button.css
@@ -19,8 +19,12 @@
     opacity:0.3;
 }
 .button-spacer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     min-width:30px;
     max-width:30px;
     min-height:30px;
     max-height:30px;
+    font-size: 11px;
 }
