--- a/client/src/components/FeedArticle.css
+++ b/client/src/components/FeedArticle.css
@@ -45,6 +45,11 @@
     color: rgba(0,0,0,0.6);
     max-width: 600px;
 }
+.feed-card-content p:first-child{
+    padding-top:0px;
+    margin-top:0px;
+
+}
 .feed-card-date{
     font-size: 11px;
     color: rgba(0,0,0,0.4);
